--- a/TTAFLSP1_Subpage.html
+++ b/TTAFLSP1_Subpage.html
@@ -48,7 +48,7 @@
     <div class="button-container">
         <button class="story-button" onclick="window.location.href='TTAFLSP1.html';">Part 1: The Undiscovered</button>
         <button class="story-button" onclick="window.location.href='TTAFLSP2.html';">Part 2: The New Friend</button>
-        <button class="story-button" onclick="window.location.href='TTAFStorySelection.html';">Return Home</button>
+        <button class="story-button" onclick="window.location.href='index.html';">Return Home</button>
     </div>
 </body>
 </html>
