--- a/TTAFLSP2.html
+++ b/TTAFLSP2.html
@@ -54,7 +54,7 @@
 <body>
 <h1>Part 2: The New Friend</h1>
 <p>
-  
+  The episode begins with Ben and Tim on the SP ship when something bad happens. Something weird on another level occurs 1.4 hours into their trip. Suddenly, their ship gets teleported somewhere inaccessible, even with the most advanced technology. They find themselves in Universe 659A—pure hell. The entire universe is made of strange matter that would instantly convert them into strange matter upon entry. Fortunately, this lasts only for 1.2 deki-seconds, a trillionth of a trillionth of a plank second. They return, but Tim is gone—vanished, erased from existence. Ben is frozen in time.The spaceship's malfunction was supposed to occur only in the presence of a significant threat. Though nothing seemed to be there, the horrible entity named Yuik had located them. Yuik used his machine to transport Tim to Universe -1A, where he was instantly struck and killed by Redle, a universal element unique to that universe.Yuik was once a being like them. A super genius turned psychopath, he gained the power to kill everyone on 37% of worlds after someone murdered his family. In revenge, Yuik killed his family's murderer, but a chemical reaction with the poison he used caused the killer to become an undead entity. This entity absorbed Yuik’s soul and characteristics, becoming 63% Yuik and 37% psychotic
 </p>
 <div class="button-container">
     <button class="return-button" onclick="window.location.href='TTAFLSP1_Subpage.html';">Return</button>
